--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@ under the License.
   <parent>
     <groupId>org.apache.maven.doxia</groupId>
     <artifactId>doxia-tools</artifactId>
-    <version>30</version>
-    <relativePath>../../pom/maven/doxia-tools/pom.xml</relativePath>
+    <version>33</version>
+    <relativePath></relativePath>
   </parent>
 
   <artifactId>doxia-linkcheck</artifactId>
@@ -55,6 +55,10 @@ under the License.
       <url>scm:svn:https://svn.apache.org/repos/asf/maven/doxia/website/components/${maven.site.path}</url>
     </site>
   </distributionManagement>
+  
+  <properties>
+    <javaVersion>7</javaVersion>
+  </properties>
 
   <dependencies>
     <!-- compile dependencies -->
