--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@ under the License.
   <parent>
     <groupId>org.apache.maven.doxia</groupId>
     <artifactId>doxia-tools</artifactId>
-    <version>33</version>
+    <version>34</version>
     <relativePath></relativePath>
   </parent>
 
@@ -58,6 +58,7 @@ under the License.
   
   <properties>
     <javaVersion>7</javaVersion>
+    <project.build.outputTimestamp>2020-04-07T21:04:00Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
@@ -107,7 +108,6 @@ under the License.
         <plugin>
           <groupId>org.codehaus.plexus</groupId>
           <artifactId>plexus-component-metadata</artifactId>
-          <version>1.7.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
