--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@ under the License.
   </issueManagement>
   <ciManagement>
     <system>Jenkins</system>
-    <url>https://builds.apache.org/view/M-R/view/Maven/job/doxia-linkcheck/</url>
+    <url>https://ci-builds.apache.org/job/Maven/job/maven-box/job/doxia-linkcheck/</url>
   </ciManagement>
   <distributionManagement>
     <site>
