--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,8 @@ under the License.
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.14</version>
+      <version>1.2.17</version>
+      <scope>runtime</scope>
     </dependency>
 
     <!-- Plexus -->
