--- a/.asf.yaml
+++ b/.asf.yaml
@@ -8,3 +8,7 @@ github:
     - apache-maven
     - doxia
     - doxia-tools
+  enabled_merge_buttons:
+    squash: true
+    merge: false
+    rebase: true
