--- a/.asf.yaml
+++ b/.asf.yaml
@@ -12,3 +12,8 @@ github:
     squash: true
     merge: false
     rebase: true
+notifications:
+  commits: commits@maven.apache.org
+  issues: issues@maven.apache.org
+  pullrequests: issues@maven.apache.org
+  jira_options: link label comment
