--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@ under the License.
     <tag>HEAD</tag>
   </scm>
   <issueManagement>
-    <system>jira</system>
-    <url>https://issues.apache.org/jira/browse/DOXIATOOLS/</url>
+    <system>GitHub Issues</system>
+    <url>https://github.com/apache/maven-doxia-linkcheck/issues</url>
   </issueManagement>
   <ciManagement>
     <system>Jenkins</system>
